@startuml Cartographes-du-Metro
!pragma layout smetana
title Les Cartographes du Metro - Diagramme de classes (2 applis 100% independantes : Edition + Jeu)

skinparam classAttributeIconSize 0
hide empty members

' ===================== METIER (PARTAGE) =====================
package metier <<Folder>> {

enum Symbole {
  CERCLE
  CROIX
  TRIANGLE
  CARRE
}

enum Couleur {
  ROUGE
  VERT
  BLEU
  MARRON
}

enum Teinte {
  FONCE
  CLAIR
}

class Sommet {
  - ligne : int
  - colonne : int
  - symbole : Symbole
  + getLigne() : int
  + getColonne() : int
  + getSymbole() : Symbole
  + setSymbole(Symbole)
}

class Arete {
  - s1 : Sommet
  - s2 : Sommet
  + getS1() : Sommet
  + getS2() : Sommet
  + getAutre(Sommet) : Sommet
  + relie(Sommet, Sommet) : boolean
}

class Zone {
  - id : int
  - cases : List<int[]>
  + ajouterCase(int, int)
  + contientCase(int, int) : boolean
  + getCases() : List<int[]>
  + getTaille() : int
}

class Base {
  - couleur : Couleur
  - sommet : Sommet
  + getCouleur() : Couleur
  + getSommet() : Sommet
}

class Plateau {
  - id : int
  - nom : String
  - lignes : int
  - colonnes : int
  + ajouterSommet(int, int, Symbole) : Sommet
  + supprimerSommet(Sommet)
  + getSommet(int, int) : Sommet
  + getSommets() : List<Sommet>
  + genererAretes()
  + getAretes() : List<Arete>
  + getVoisins(Sommet) : List<Sommet>
  + ajouterZone() : Zone
  + getZones() : List<Zone>
  + ajouterBase(Couleur, Sommet) : Base
  + getBases(Couleur) : List<Base>
  + dupliquer() : Plateau
  + getId() : int
  + setId(int)
  + getNom() : String
  + setNom(String)
}

class GestionnairePlateaux {
  - prochainId : int
  - dernieresCouleurs : int[]
  + {static} FOND_VIDE : int
  + creer(int, int, String) : Plateau
  + dupliquer(Plateau, String) : Plateau
  + supprimer(Plateau)
  + getParId(int) : Plateau
  + getPlateaux() : List<Plateau>
  + sauvegarder(int[], Plateau, String)
  + charger(String) : Plateau
  + getDernieresCouleurs() : int[]
}

class Carte {
  - symbole : Symbole
  - teinte : Teinte
  - joker : boolean
  + {static} de(Symbole, Teinte) : Carte
  + {static} joker(Teinte) : Carte
  + getSymbole() : Symbole
  + getTeinte() : Teinte
  + estJoker() : boolean
  + estFonce() : boolean
}

class Pioche {
  + reinitialiser()
  + piocher() : Carte
  + estVide() : boolean
  + getNbTotal() : int
}

class Manche {
  - nbFoncees : int
  - seuilArret : int
  + getCouleur() : Couleur
  + piocher() : Carte
  + tourTermine() : boolean
}

class CheminCouleur {
  + ajouter(Sommet) : boolean
  + recalculer()
  + contient(Sommet) : boolean
  + estAdjacent(Sommet) : boolean
  + getAretesDisponibles() : List<Arete>
  + getZonesConquises() : List<Zone>
  + calculerScore() : int
}

class Joueur {
  - id : int
  - nom : String
  + initialiserChemin(Couleur, Base, Plateau)
  + getChemin(Couleur) : CheminCouleur
  + getScoreTotal() : int
}

class Jeu {
  - etat : Etat
  + demarrer()
  + piocher() : Carte
  + connecter(Joueur, Sommet) : boolean
  + peutConnecter(Joueur, Sommet) : boolean
  + getSommetsJouables(Joueur, Carte) : Set<Sommet>
  + supprimerSommet(Sommet)
  + tourActuelTermine() : boolean
  + mancheSuivante() : boolean
  + getClassement() : List<Joueur>
  + getCouleurActuelle() : Couleur
}

enum Etat {
  EN_ATTENTE
  EN_COURS
  TERMINE
}
}

' ===================== CONTROLEURS (1 par appli) =====================
package controleur <<Folder>> {

class ControleurEdition {
  + creerPlateau(int, int, String) : Plateau
  + ajouterSommet(int, int, Symbole) : Sommet
  + supprimerSommet(Sommet)
  + creerZone() : Zone
  + ajouterCaseAZone(Zone, int, int)
  + poserBase(Couleur, Sommet) : Base
  + dupliquerPlateau(String) : Plateau
  + sauvegarder(int[], String)
  + getPlateau() : Plateau
  + getCouleurs() : int[]
}

class ControleurJeu {
  + chargerPlateau(String) : Plateau
  + getCouleurs() : int[]
  + demarrerPartie(List<String>)
  + piocher() : Carte
  + getSommetsJouables() : Set<Sommet>
  + connecter(Sommet) : boolean
  + joueurSuivant()
  + tourTermine() : boolean
  + mancheSuivante() : boolean
  + getClassement() : List<Joueur>
  + getPlateau() : Plateau
}
}

note top of ControleurEdition : APP 1 - Edition (AppEdition/)\ncree/edite un plateau\npuis ecrit un fichier .txt
note top of ControleurJeu : APP 2 - Jeu (AppJeu/)\ncharge le .txt\net joue (2 joueurs)
note bottom of Plateau : Le metier est DUPLIQUE :\nAppEdition a sa copie (plateau seul),\nAppJeu a la sienne (plateau + moteur).\nLes 2 applis sont autonomes.

' ===================== RELATIONS =====================

' Composition du plateau
Plateau "1" *-- "*" Sommet
Plateau "1" *-- "*" Arete
Plateau "1" *-- "*" Zone
Plateau "1" *-- "*" Base

Arete "1" --> "2" Sommet
Base --> Sommet
Base --> Couleur
Sommet --> Symbole

' Cartes
Carte --> Symbole
Carte --> Teinte
Pioche "1" *-- "*" Carte
Manche "1" *-- "1" Pioche
Manche --> Couleur

' Reseau d'un joueur
CheminCouleur --> Plateau
CheminCouleur --> Base
CheminCouleur o-- Sommet
CheminCouleur o-- Arete

' Joueur / Jeu
Joueur "1" *-- "*" CheminCouleur
Jeu --> Plateau
Jeu "1" o-- "*" Joueur
Jeu "1" *-- "1" Manche
Jeu +-- Etat

' Gestion & controleurs
GestionnairePlateaux "1" o-- "*" Plateau

ControleurEdition --> GestionnairePlateaux
ControleurEdition --> Plateau

ControleurJeu --> GestionnairePlateaux
ControleurJeu --> Plateau
ControleurJeu --> Jeu

@enduml
